application_id = 'com.jeffser.Alpaca'

scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / 'com.jeffser.Alpaca.svg',
  install_dir: get_option('datadir') / 'icons' / scalable_dir
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / 'com.jeffser.Alpaca-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)

png_dir = 'hicolor' / '512x512' / 'apps'
install_data(
  png_dir / 'com.jeffser.Alpaca.png',
  install_dir: get_option('datadir') / 'icons' / png_dir
)