moduledir = get_option('prefix') / get_option('datadir') / meson.project_name() / 'alpaca' / 'widgets' / 'activities'

blocks = [
  '__init__.py',
  'background_remover.py',
  'web_browser.py',
  'live_chat.py',
  'terminal.py',
  'camera.py',
  'transcriber.py',
]

install_data(blocks, install_dir: moduledir)