moduledir = get_option('prefix') / get_option('datadir') / meson.project_name() / 'alpaca' / 'widgets' / 'blocks'

blocks = [
  '__init__.py',
  'table.py',
  'latex.py',
  'text.py',
  'code.py',
  'separator.py',
  'thinking.py',
  'inline_picture.py'
]

install_data(blocks, install_dir: moduledir)